--- a/web/index.html
+++ b/web/index.html
@@ -1,63 +1,2 @@
-<!--
-If you do not see this content in your browser, pygbag is NOT using your web/index.html.
-Common reasons:
-- The file must be named exactly 'index.html' and placed inside a folder named 'web' in your project root.
-- You must run pygbag from the project root (where your main.py is).
-- You must rebuild your project after adding/changing web/index.html.
-- Some pygbag versions only merge web/index.html if you use the --build option: python -m pygbag --build .
-- If you use a different entry point, check pygbag docs for custom HTML support.
-
-References:
-- https://pygame-web.github.io/ (see "Custom HTML" section)
-- https://github.com/pygame-web/pygbag#custom-html
-- https://github.com/pygame-web/pygbag/issues/71
-- https://github.com/pygame-web/pygbag/issues/206
-
-Checklist:
-1. Your project folder should look like:
-   greenwelt/
-     main.py
-     web/
-       index.html
-       js.js (optional)
-2. Run: python -m pygbag --build .
-3. Open the generated .html in browser and check for your custom content.
-
-If it still does not work, your pygbag version may not support merging custom HTML, or there may be a bug. Check the pygbag documentation and issues for updates.
--->
-<h1 style="position:fixed;top:0;left:0;z-index:99999;color:red;">CUSTOM HTML LOADED</h1>
-<style>
-#custom-fullscreen-btn {
-    position: fixed;
-    right: 20px;
-    bottom: 20px;
-    width: 64px;
-    height: 64px;
-    background: #285080;
-    color: #fff;
-    border: none;
-    border-radius: 10px;
-    font-size: 32px;
-    z-index: 99999;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.2);
-    cursor: pointer;
-    pointer-events: auto;
-    display: block;
-}
-</style>
-<!-- Add a visible test button for debugging -->
-<button id="custom-fullscreen-btn" onclick="myFullscreenToggle()" title="Toggle Fullscreen" style="position:fixed;right:20px;bottom:20px;z-index:99999;background:#285080;color:#fff;">FULLSCREEN</button>
-<script>
-console.log("CUSTOM-HTML-LOADED");
-function myFullscreenToggle() {
-    console.log("Fullscreen button clicked");
-    var canvas = document.getElementById("canvas");
-    if (document.fullscreenElement) {
-        document.exitFullscreen();
-    } else if (canvas) {
-        canvas.requestFullscreen();
-    } else {
-        document.documentElement.requestFullscreen();
-    }
-}
-</script>
+<!-- Plant Courier - Custom pygbag template -->
+<!-- This file is used by pygbag during build to customize the HTML output -->
