--- a/web/index.html
+++ b/web/index.html
@@ -1,2 +1,123 @@
-<!-- Plant Courier - Custom pygbag template -->
-<!-- This file is used by pygbag during build to customize the HTML output -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Plant Courier</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: #2c2c2c;
+            font-family: Arial, sans-serif;
+            overflow: hidden;
+        }
+        canvas {
+            display: block;
+        }
+    </style>
+</head>
+<body>
+    <script src="https://pygame-web.github.io/archives/0.9/pythons.js" id="site" data-python="python3.12" data-os="vtx,fs,snd,gui" async defer>#<!--
+print("""
+Loading Plant Courier Game
+    Pygbag Version : 0.9.2
+    Python  : 3.12
+    CDN URL : https://pygame-web.github.io/archives/0.9/
+    Screen  : 1920x1080
+    Title   : Plant Courier
+""")
+
+# screen pixels (real, hardware)
+WIDTH=1024  # 1280
+HEIGHT=600  # 720
+
+# reference/idealized screen pixels
+REFX = 1920
+REFY = 1080
+
+def u(real, ref, v):
+    if abs(v)<0.9999999:
+        result = int( (float(real)/100.0) * (v*1000))
+        if v<0:
+            return real-result
+        return result
+    return int( (real/ref) * v )
+
+def ux(*argv):
+    global WIDTH, REFX
+    acc = 0
+    for v in argv:
+        acc += u(WIDTH, REFX, v)
+    return acc
+
+def uy(*argv):
+    global HEIGHT, REFY
+    acc = 0
+    for v in argv:
+        acc += u(HEIGHT, REFY, v)
+    return acc
+
+
+# do not rename
+async def custom_site():
+
+    import sys
+    import asyncio
+    import platform
+    import json
+    from pathlib import Path
+
+    import embed
+
+    platform.document.body.style.background = "#7f7f7f"
+
+    import pygame
+
+    def compose():
+        pygame.display.update()
+        window.chromakey(None, *screen.get_colorkey(), 40)
+
+    pygame.init()
+    pygame.font.init()
+
+    screen = pygame.display.set_mode([ux(.100),uy(.100)], pygame.SRCALPHA, 32)
+    screen.set_colorkey( (0,0,0,0), pygame.RLEACCEL )
+    screen.fill( (0,0,0,0) )
+
+    compose()
+
+    platform.window.transfer.hidden = true
+    platform.window.canvas.style.visibility = "visible"
+
+    apk = "staging.apk"
+    bundle = "staging"
+
+    # the C or js loader could do that but be explicit.
+    appdir = Path(f"/data/data/{bundle}") # /data/data/staging
+    appdir.mkdir()
+
+    # mount apk
+    cfg = {
+        "io": "url",
+        "type":"mount",
+        "mount": f"{apk}",
+        "target": f"/data/data/{bundle}"
+    }
+
+    mount = await embed.aio_get(cfg)
+
+    for key in mount:
+        sys.path.insert(0, f"{mount[key]}")
+
+    sys.argv = ["game"]
+
+    try:
+        import main
+        await main.main()
+    except SystemExit:
+        pass
+
+--></script>
+</body>
+</html>
